Fix word-break in Firefox

--- a/assets/app/styles/_mixins.less
+++ b/assets/app/styles/_mixins.less
@@ -41,8 +41,7 @@
 
 .word-break() {
  -ms-word-break: break-all; // ms
-     word-break: break-all; // firefox
-     word-break: break-word; // webkit
+     word-wrap: break-word;
   overflow-wrap: break-word; // new name as per the CSS3 spec
 }
 
